[package]
name = "day_04"
version = "0.1.0"
authors = ["Matt Mullins <mmullins@mmlx.us>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
maplit = "1.0"
prelude = { path = "../prelude" }
regex = "1.4"
